--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 			<version>3.1.0</version>
 		</dependency>
 		<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-test</artifactId>
+    <scope>test</scope>
+</dependency>
+		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jasper</artifactId>
 			<version>9.0.19</version>
