--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ project.image =/static/image
 
 spring.datasource.url=jdbc:mysql://localhost:3306/QuizApp
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=ROOT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
@@ -19,9 +19,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 
-spring.jwtConfig.token-validity: 300000
-spring.jwtConfig.refresh-token-validity: 100000000000000
-spring.jwtConfig.secret-key: intelliatech
+spring.jwtConfig.token-validity = 300000
+spring.jwtConfig.refresh-token-validity= 100000000000000
+spring.jwtConfig.secret-key= intelliatech
+spring.security.isenabled = false
 
 
 #jsp configuration
