--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,26 @@
 			<artifactId>tomcat-jasper</artifactId>
 			<version>9.0.19</version>
 		</dependency>
+		
+		<!--Test Dependency-->
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-core</artifactId>
+            <version>2.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <version>2.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>2.0.2</version>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 
